hphp/hack/test/typecheck/pipe_lambda.php.exp
File "pipe_lambda.php", line 8, characters 32-33:
Variable `$$` is undefined, or not always defined. (Naming[2050])
File "pipe_lambda.php", line 8, characters 20-21:
Did you mean `$z` instead?
